--- a/index.html
+++ b/index.html
@@ -12,141 +12,143 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
 Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
 License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
 -->
-<!--[if IE 8]> <html lang="en" class="ie8 no-js" data-ng-app="MetronicApp"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9 no-js" data-ng-app="MetronicApp"> <![endif]-->
+<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
 <!--[if !IE]><!-->
-<html lang="en" data-ng-app="MetronicApp">
-    <!--<![endif]-->
-    <!-- BEGIN HEAD -->
+<html lang="en" data-ng-app="KanguDashboard">
+	<!--<![endif]-->
+	<!-- BEGIN HEAD -->
 
-    <head>
-        <title data-ng-bind="'Metronic AngularJS | ' + $state.current.data.pageTitle"></title>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <meta content="" name="description" />
-        <meta content="" name="author" />
-        <!-- BEGIN GLOBAL MANDATORY STYLES -->
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
-        <link href="assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-        <!-- END GLOBAL MANDATORY STYLES -->
-        <!-- BEGIN DYMANICLY LOADED CSS FILES(all plugin and page related styles must be loaded between GLOBAL and THEME css files ) -->
-        <link id="ng_load_plugins_before" />
-        <!-- END DYMANICLY LOADED CSS FILES -->
-        <!-- BEGIN THEME STYLES -->
-        <!-- DOC: To use 'rounded corners' style just load 'components-rounded.css' stylesheet instead of 'components.css' in the below style tag -->
-        <link href="assets/global/css/components.min.css" id="style_components" rel="stylesheet" type="text/css" />
-        <link href="assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/layouts/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" />
-        <link href="assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
-        <!-- END THEME STYLES -->
-        <link rel="shortcut icon" href="favicon.ico" /> </head>
-    <!-- END HEAD -->
-    <!-- BEGIN BODY -->
-    <!-- DOC: Apply "page-header-fixed-mobile" and "page-footer-fixed-mobile" class to body element to force fixed header or footer in mobile devices -->
-    <!-- DOC: Apply "page-sidebar-closed" class to the body and "page-sidebar-menu-closed" class to the sidebar menu element to hide the sidebar by default -->
-    <!-- DOC: Apply "page-sidebar-hide" class to the body to make the sidebar completely hidden on toggle -->
-    <!-- DOC: Apply "page-sidebar-closed-hide-logo" class to the body element to make the logo hidden on sidebar toggle -->
-    <!-- DOC: Apply "page-sidebar-hide" class to body element to completely hide the sidebar on sidebar toggle -->
-    <!-- DOC: Apply "page-sidebar-fixed" class to have fixed sidebar -->
-    <!-- DOC: Apply "page-footer-fixed" class to the body element to have fixed footer -->
-    <!-- DOC: Apply "page-sidebar-reversed" class to put the sidebar on the right side -->
-    <!-- DOC: Apply "page-full-width" class to the body element to have full width page without the sidebar menu -->
+	<head>
+		<meta charset="utf-8" />
+		<title>KanguDashboard | Login</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<meta content="Preview page of Metronic Admin Theme #1 for " name="description" />
+		<meta content="" name="author" />
+		<!-- BEGIN GLOBAL MANDATORY STYLES -->
+		<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
+		<link href="assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+		<link href="assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
+		<link href="assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
+		<!-- END GLOBAL MANDATORY STYLES -->
+		<!-- BEGIN PAGE LEVEL PLUGINS -->
+		<link href="assets/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
+		<link href="assets/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<!-- END PAGE LEVEL PLUGINS -->
+		<!-- BEGIN THEME GLOBAL STYLES -->
+		<link href="assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
+		<link href="assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
+		<!-- END THEME GLOBAL STYLES -->
+		<!-- BEGIN PAGE LEVEL STYLES -->
+		<link href="assets/pages/css/login-5.min.css" rel="stylesheet" type="text/css" />
+		<!-- END PAGE LEVEL STYLES -->
+		<!-- BEGIN THEME LAYOUT STYLES -->
+		<!-- END THEME LAYOUT STYLES -->
+		<link rel="shortcut icon" href="favicon.ico" /> </head>
+	<!-- END HEAD -->
 
-    <body ng-controller="AppController" class="page-header-fixed page-sidebar-closed-hide-logo page-on-load" ng-class="{'page-content-white': settings.layout.pageContentWhite,'page-container-bg-solid': settings.layout.pageBodySolid, 'page-sidebar-closed': settings.layout.pageSidebarClosed}">
-        <!-- BEGIN PAGE SPINNER -->
-        <div ng-spinner-bar class="page-spinner-bar">
-            <div class="bounce1"></div>
-            <div class="bounce2"></div>
-            <div class="bounce3"></div>
-        </div>
-        <!-- END PAGE SPINNER -->
-        <!-- BEGIN HEADER -->
-        <div data-ng-include="'tpl/header.html'" data-ng-controller="HeaderController" class="page-header navbar navbar-fixed-top"> </div>
-        <!-- END HEADER -->
-        <div class="clearfix"> </div>
-        <!-- BEGIN CONTAINER -->
-        <div class="page-container">
-            <!-- BEGIN SIDEBAR -->
-            <div data-ng-include="'tpl/sidebar.html'" data-ng-controller="SidebarController" class="page-sidebar-wrapper"> </div>
-            <!-- END SIDEBAR -->
-            <!-- BEGIN CONTENT -->
-            <div class="page-content-wrapper">
-                <div class="page-content">
-                    <!-- BEGIN STYLE CUSTOMIZER(optional) -->
-                    <div data-ng-include="'tpl/theme-panel.html'" data-ng-controller="ThemePanelController" class="theme-panel hidden-xs hidden-sm"> </div>
-                    <!-- END STYLE CUSTOMIZER -->
-                    <!-- BEGIN ACTUAL CONTENT -->
-                    <div ui-view class="fade-in-up"> </div>
-                    <!-- END ACTUAL CONTENT -->
-                </div>
-            </div>
-            <!-- END CONTENT -->
-            <!-- BEGIN QUICK SIDEBAR -->
-            <a href="javascript:;" class="page-quick-sidebar-toggler">
-                <i class="icon-login"></i>
-            </a>
-            <div data-ng-include="'tpl/quick-sidebar.html'" data-ng-controller="QuickSidebarController" class="page-quick-sidebar-wrapper"></div>
-            <!-- END QUICK SIDEBAR -->
-        </div>
-        <!-- END CONTAINER -->
-        <!-- BEGIN FOOTER -->
-        <div data-ng-include="'tpl/footer.html'" data-ng-controller="FooterController" class="page-footer"> </div>
-        <!-- END FOOTER -->
-        <!-- BEGIN QUICK NAV -->
-        <nav class="quick-nav">
-            <a class="quick-nav-trigger" href="#">
-                <span aria-hidden="true"></span>
-            </a>
-            <ul>
-                <li>
-                    <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" target="_blank" class="active">
-                        <span>Purchase Metronic</span>
-                        <i class="icon-basket"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/reviews/4021469?ref=keenthemes" target="_blank">
-                        <span>Customer Reviews</span>
-                        <i class="icon-users"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://keenthemes.com/showcast/" target="_blank">
-                        <span>Showcase</span>
-                        <i class="icon-user"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://keenthemes.com/metronic-theme/changelog/" target="_blank">
-                        <span>Changelog</span>
-                        <i class="icon-graph"></i>
-                    </a>
-                </li>
-            </ul>
-            <span aria-hidden="true" class="quick-nav-bg"></span>
-        </nav>
-        <div class="quick-nav-overlay"></div>
-        <!-- END QUICK NAV -->
-        <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
-        <!-- BEGIN CORE JQUERY PLUGINS -->
-        <!--[if lt IE 9]>
-	<script src="assets/global/plugins/respond.min.js"></script>
-	<script src="assets/global/plugins/excanvas.min.js"></script> 
-	<![endif]-->
-        <script src="assets/global/plugins/jquery.min.js" type="text/javascript"></script>
-        <script src="assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
-        <script src="assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-        <script src="assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-        <script src="assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
-        <script src="assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
-        <!-- END CORE JQUERY PLUGINS -->
-        <!-- BEGIN CORE ANGULARJS PLUGINS -->
+	<body class="login" ng-controller="LoginController">
+		<!-- BEGIN : LOGIN PAGE 5-1 -->
+		<div ui-view class="fade-in-up"> </div>
+		<div class="user-login-5">
+			<div class="row bs-reset">
+				<div class="col-md-6 bs-reset mt-login-5-bsfix">
+					<div class="login-bg" style="background-image:url(assets/pages/img/login/bg1.jpg)">
+						<img class="login-logo" src="assets/pages/img/login/logo.png" /> </div>
+				</div>
+				<div class="col-md-6 login-container bs-reset mt-login-5-bsfix">
+					<div class="login-content">
+						<h1>Kangu Dashboard {{'Login'}}</h1>
+						<p> Kangu's administrator dashboard! </p>
+						<form action="javascript:;" method="post" class="login-form" ng-submit="login($event, user)">
+							<div class="alert alert-danger display-hide">
+								<button class="close" data-close="alert"></button>
+								<span>Enter any username and password. </span>
+							</div>
+							<div class="row">
+								<div class="col-xs-6">
+									<input class="form-control form-control-solid placeholder-no-fix form-group" type="text" autocomplete="off" placeholder="Username" name="username" required ng-model="user.email"/> </div>
+								<div class="col-xs-6">
+									<input class="form-control form-control-solid placeholder-no-fix form-group" type="password" autocomplete="off" placeholder="Password" name="password" required ng-model="user.password"/> </div>
+							</div>
+							<div class="row">
+								<div class="col-sm-4">
+								</div>
+								<div class="col-sm-8 text-right">
+									<div class="forgot-password">
+										<a href="javascript:;" id="forget-password" class="forget-password">Forgot Password?</a>
+									</div>
+									<button class="btn green" type="submit">Sign In</button>
+								</div>
+							</div>
+						</form>
+						<!-- BEGIN FORGOT PASSWORD FORM -->
+						<form class="forget-form" action="javascript:;" method="post">
+							<h3 class="font-green">Forgot Password ?</h3>
+							<p> Enter your e-mail address below to reset your password. </p>
+							<div class="form-group">
+								<input class="form-control placeholder-no-fix form-group" type="text" autocomplete="off" placeholder="Email" name="email" /> </div>
+							<div class="form-actions">
+								<button type="button" id="back-btn" class="btn green btn-outline">Back</button>
+								<button type="submit" class="btn btn-success uppercase pull-right">Submit</button>
+							</div>
+						</form>
+						<!-- END FORGOT PASSWORD FORM -->
+					</div>
+					<div class="login-footer">
+						<div class="row bs-reset">
+							<div class="col-xs-5 bs-reset">
+								<ul class="login-social">
+									<li>
+										<a href="https://www.facebook.com/Kangu-685385734987167/" target="blank">
+											<i class="icon-social-facebook"></i>
+										</a>
+									</li>
+									<li>
+										<a href="javascript:;" target="blank">
+											<i class="icon-social-twitter"></i>
+										</a>
+									</li>
+									<li>
+										<a href="http://kangu.com.co/" target="blank">
+											<i class="icon-social-dribbble"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="col-xs-7 bs-reset">
+								<div class="login-copyright text-right">
+									<p>Copyright &copy; Kangu 2017</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- END : LOGIN PAGE 5-1 -->
+		<!--[if lt IE 9]>
+<script src="assets/global/plugins/respond.min.js"></script>
+<script src="assets/global/plugins/excanvas.min.js"></script> 
+<script src="assets/global/plugins/ie8.fix.min.js"></script> 
+<![endif]-->
+		<!-- BEGIN CORE PLUGINS -->
+		<script src="assets/global/plugins/jquery.min.js" type="text/javascript"></script>
+		<script src="assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
+		<script src="assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+		<script src="assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+		<script src="assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+		<!-- END CORE PLUGINS -->
+		<!-- BEGIN PAGE LEVEL PLUGINS -->
+		<script src="assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
+		<script src="assets/global/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
+		<script src="assets/global/plugins/select2/js/select2.full.min.js" type="text/javascript"></script>
+		<script src="assets/global/plugins/backstretch/jquery.backstretch.min.js" type="text/javascript"></script>
+		<!-- END PAGE LEVEL PLUGINS -->
+		<!-- BEGIN CORE ANGULARJS PLUGINS -->
         <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
         <script src="assets/global/plugins/angularjs/angular-sanitize.min.js" type="text/javascript"></script>
         <script src="assets/global/plugins/angularjs/angular-touch.min.js" type="text/javascript"></script>
@@ -157,16 +159,23 @@ License: You must have a valid license purchased only from themeforest(the above
         <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
         <script src="js/main.js" type="text/javascript"></script>
         <script src="js/directives.js" type="text/javascript"></script>
-        <!-- END APP LEVEL ANGULARJS SCRIPTS -->
-        <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
-        <script src="assets/global/scripts/app.min.js" type="text/javascript"></script>
-        <script src="assets/layouts/layout/scripts/layout.min.js" type="text/javascript"></script>
-        <script src="assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
-        <script src="assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
-        <script src="assets/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
-        <!-- END APP LEVEL JQUERY SCRIPTS -->
-        <!-- END JAVASCRIPTS -->
-    </body>
-    <!-- END BODY -->
+		<!-- BEGIN THEME GLOBAL SCRIPTS -->
+		<script src="assets/global/scripts/app.min.js" type="text/javascript"></script>
+		<!-- END THEME GLOBAL SCRIPTS -->
+		<!-- BEGIN PAGE LEVEL SCRIPTS -->
+		<script src="assets/pages/scripts/login-5.min.js" type="text/javascript"></script>
+		<!-- END PAGE LEVEL SCRIPTS -->
+		<!-- BEGIN THEME LAYOUT SCRIPTS -->
+		<!-- END THEME LAYOUT SCRIPTS -->
+		<script>
+			$(document).ready(function()
+			{
+				$('#clickmewow').click(function()
+				{
+					$('#radio1003').attr('checked', 'checked');
+				});
+			})
+		</script>
+	</body>
 
 </html>
