--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -59,7 +59,7 @@
 			</a>
 		</li>
 		<li class="nav-item">
-			<a ui-sref="store_menu" class="nav-link nav-toggle">
+			<a class="nav-link nav-toggle">
 				<i class="icon-home"></i>
 				<span class="title">Tienda</span>
 				<span class="arrow"></span>
