--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 	<head>
 		<meta charset="utf-8" />
-		<title>KanguDashboard | Login</title>
+		<title>KDashboard | Login</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<meta content="Preview page of Metronic Admin Theme #1 for " name="description" />
@@ -43,6 +43,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!-- END THEME GLOBAL STYLES -->
 		<!-- BEGIN PAGE LEVEL STYLES -->
 		<link href="assets/pages/css/login-5.min.css" rel="stylesheet" type="text/css" />
+		<link href="../assets/global/plugins/bootstrap-toastr/toastr.min.css" rel="stylesheet" type="text/css" />
 		<!-- END PAGE LEVEL STYLES -->
 		<!-- BEGIN THEME LAYOUT STYLES -->
 		<!-- END THEME LAYOUT STYLES -->
@@ -155,6 +156,8 @@ License: You must have a valid license purchased only from themeforest(the above
         <script src="assets/global/plugins/angularjs/plugins/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="assets/global/plugins/angularjs/plugins/ocLazyLoad.min.js" type="text/javascript"></script>
         <script src="assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
+        <script src="../assets/global/plugins/bootstrap-toastr/toastr.min.js" type="text/javascript"></script>
+        <script src="../assets/pages/scripts/ui-toastr.min.js"></script>
         <!-- END CORE ANGULARJS PLUGINS -->
         <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
         <script src="js/main.js" type="text/javascript"></script>
