Update variant ready

--- a/tpl/header.html
+++ b/tpl/header.html
@@ -3,7 +3,7 @@
     <!-- BEGIN LOGO -->
     <div class="page-logo">
         <a ui-sref="dashboard">
-            <img src="{{settings.layoutPath}}/img/logo.png" alt="logo" class="logo-default" /> </a>
+            <img style="margin:0;max-width:50%;" src="{{settings.layoutPath}}/img/logo-acostado-en-color-blanco.png" alt="logo" class="logo-default" /> </a>
         <div class="menu-toggler sidebar-toggler">
             <span></span>
             <!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
