--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			<div class="row bs-reset">
 				<div class="col-md-6 bs-reset mt-login-5-bsfix">
 					<div class="login-bg" style="background-image:url(assets/pages/img/login/bg1.jpg)">
-						<img class="login-logo" src="assets/pages/img/login/logo.png" /> </div>
+						<img style="max-width:30%;" class="login-logo" src="assets/global/img/logo-acostado-en-color-blanco.png" /> </div>
 				</div>
 				<div class="col-md-6 login-container bs-reset mt-login-5-bsfix">
 					<div class="login-content">
