--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -105,7 +105,7 @@
 					</a>
 				</li>
 				<li>
-					<a ui-sref="unnamed2_menu">
+					<a ui-sref="income_expenses">
 						<i class="icon-paper-clip"></i> Ingresos y Egresos</span>
 					</a>
 				</li>
