BusinessPlace update ready

--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -53,7 +53,7 @@
 			</a>
 		</li>
 		<li class="nav-item">
-			<a ui-sref="business_menu">
+			<a ui-sref="business_places">
 				<i class="icon-home"></i>
 				<span class="title">Negocios</span>
 			</a>
