--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -28,7 +28,7 @@
 			<!-- END RESPONSIVE QUICK SEARCH FORM -->
 		</li>
 		<li class="start nav-item">
-			<a ui-sref="dashboard_menu" class="nav-link nav-toggle">
+			<a class="nav-link nav-toggle">
 				<i class="icon-home"></i>
 				<span class="title">Dashboard</span>
 				<span class="arrow"></span>
