--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -110,7 +110,7 @@
 					</a>
 				</li>
 				<li>
-					<a ui-sref="creditnotes_menu">
+					<a ui-sref="credit_note">
 						<i class="icon-paper-clip"></i> Nota credito</span>
 					</a>
 				</li>
