--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -100,7 +100,7 @@
 					</a>
 				</li>
 				<li>
-					<a ui-sref="unnamed1_menu">
+					<a ui-sref="shopping_sales">
 						<i class="icon-paper-clip"></i> Compras y Ventas</span>
 					</a>
 				</li>
