--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -27,6 +27,207 @@
 			</form>
 			<!-- END RESPONSIVE QUICK SEARCH FORM -->
 		</li>
+		<li class="nav-item">
+			<a ui-sref="users_menu12">
+				<i class="icon-home"></i>
+				<span class="title">Dashboard</span>
+			</a>
+		</li>
+		<li class="nav-item">
+			<a ui-sref="supervisor_dashboard">
+				<i class="icon-home"></i>
+				<span class="title">Pedidos</span>
+			</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link nav-toggle">
+				<i class="icon-home"></i>
+				<span class="title">Inventario</span>
+				<span class="arrow"></span>
+			</a>
+			<ul class="sub-menu">
+				<li>
+					<a ui-sref="inventory_menu">
+						<i class="icon-puzzle"></i> Crear entrada</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="shopping_sales">
+						<i class="icon-paper-clip"></i> Movimientos</span>
+					</a>
+				</li>
+			</ul>
+		</li>
+		<li class="nav-item">
+			<a ui-sref="users_menu">
+				<i class="icon-home"></i>
+				<span class="title">Manejo de personal</span>
+			</a>
+		</li>
+		<li class="nav-item">
+			<a ui-sref="users_menu">
+				<i class="icon-home"></i>
+				<span class="title">Caja y cuentas</span>
+			</a>
+		</li>
+		<li class="nav-item">
+			<a ui-sref="users_menu">
+				<i class="icon-home"></i>
+				<span class="title">Dashboard</span>
+			</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link nav-toggle">
+				<i class="icon-home"></i>
+				<span class="title">CDD</span>
+				<span class="arrow"></span>
+			</a>
+			<ul class="sub-menu">
+				<li>
+					<a ui-sref="shopping_sales">
+						<i class="icon-puzzle"></i> Inventario y compras</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123123">
+						<i class="icon-paper-clip"></i> Pedidos</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123123">
+						<i class="icon-paper-clip"></i> Cajas y presupuesto</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123123">
+						<i class="icon-paper-clip"></i> Logs</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123123">
+						<i class="icon-paper-clip"></i> Compras y proveedores</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="income_expenses">
+						<i class="icon-paper-clip"></i> Ingresos y Egresos</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="credit_note">
+						<i class="icon-paper-clip"></i> Nota a credito</span>
+					</a>
+				</li>
+			</ul>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link nav-toggle">
+				<i class="icon-home"></i>
+				<span class="title">Merchandising</span>
+				<span class="arrow"></span>
+			</a>
+			<ul class="sub-menu">
+				<li>
+					<a ui-sref="products_menu">
+						<i class="icon-puzzle"></i> Productos</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="variantss_menu">
+						<i class="icon-paper-clip"></i> Variantes</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="categories_menu">
+						<i class="icon-paper-clip"></i> Categorias</span>
+					</a>
+				</li>
+			</ul>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link nav-toggle">
+				<i class="icon-home"></i>
+				<span class="title">Usuarios</span>
+				<span class="arrow"></span>
+			</a>
+			<ul class="sub-menu">
+				<li>
+					<a ui-sref="admin_dashboard">
+						<i class="icon-puzzle"></i> Internos</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="users_menu">
+						<i class="icon-paper-clip"></i> Externos</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="providers_menu">
+						<i class="icon-paper-clip"></i> Proveedores</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="business_places">
+						<i class="icon-paper-clip"></i> Negocios</span>
+					</a>
+				</li>
+			</ul>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link nav-toggle">
+				<i class="icon-home"></i>
+				<span class="title">Info y analisis</span>
+				<span class="arrow"></span>
+			</a>
+			<ul class="sub-menu">
+				<li>
+					<a ui-sref="admin_dashboard">
+						<i class="icon-puzzle"></i> Marketing y ventas</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123">
+						<i class="icon-paper-clip"></i> UX y coefciente de viralidad</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123">
+						<i class="icon-paper-clip"></i> Calidad y satisfaccion</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123">
+						<i class="icon-paper-clip"></i> Transporte</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123">
+						<i class="icon-paper-clip"></i> Bodega</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123">
+						<i class="icon-paper-clip"></i> Inventario</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123">
+						<i class="icon-paper-clip"></i> Rendimiento de personal</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123">
+						<i class="icon-paper-clip"></i> Compras y proveedores</span>
+					</a>
+				</li>
+				<li>
+					<a ui-sref="supervisor_dashboard123">
+						<i class="icon-paper-clip"></i> Financiero</span>
+					</a>
+				</li>
+			</ul>
+		</li>
+		<!--
 		<li class="start nav-item">
 			<a class="nav-link nav-toggle">
 				<i class="icon-home"></i>
@@ -40,7 +241,7 @@
 					</a>
 				</li>
 				<li>
-					<a ui-sref="supervisor_dashboard">
+					<a ui-sref="supervisor_dashboard123">
 						<i class="icon-paper-clip"></i> Supervisor</span>
 					</a>
 				</li>
@@ -145,7 +346,7 @@
 				<i class="icon-home"></i>
 				<span class="title">Salir</span>
 			</a>
-		</li>
+		</li> -->
 	</ul>
 	<!-- END SIDEBAR MENU -->
 </div>
