--- a/tpl/header.html
+++ b/tpl/header.html
@@ -381,7 +381,7 @@
                             <i class="icon-lock"></i> Lock Screen </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a ui-sref="logout_menu">
                             <i class="icon-key"></i> Log Out </a>
                     </li>
                 </ul>
