GetAllVariants function done

--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -152,7 +152,7 @@
 					</a>
 				</li>
 				<li>
-					<a ui-sref="variantss_menu">
+					<a ui-sref="product_variants">
 						<i class="icon-paper-clip"></i> Variantes</span>
 					</a>
 				</li>
