Cdd chooser done

--- a/tpl/sidebar.html
+++ b/tpl/sidebar.html
@@ -65,7 +65,7 @@
 			</a>
 		</li>
 		<li class="nav-item" ng-show="validateMenu(1)">
-			<a ui-sref="users_menu">
+			<a ui-sref="users_menu2">
 				<i class="icon-home"></i>
 				<span class="title">Caja y cuentas</span>
 			</a>
@@ -99,45 +99,7 @@
 			<a class="nav-link nav-toggle" ui-sref="cdd_chooser">
 				<i class="icon-home"></i>
 				<span class="title">CDD</span>
-				<span class="arrow"></span>
 			</a>
-			<ul class="sub-menu">
-				<li>
-					<a ui-sref="shopping_sales">
-						<i class="icon-puzzle"></i> Inventario y compras</span>
-					</a>
-				</li>
-				<li>
-					<a ui-sref="supervisor_dashboard123123">
-						<i class="icon-paper-clip"></i> Pedidos</span>
-					</a>
-				</li>
-				<li>
-					<a ui-sref="supervisor_dashboard123123">
-						<i class="icon-paper-clip"></i> Cajas y presupuesto</span>
-					</a>
-				</li>
-				<li>
-					<a ui-sref="supervisor_dashboard123123">
-						<i class="icon-paper-clip"></i> Logs</span>
-					</a>
-				</li>
-				<li>
-					<a ui-sref="supervisor_dashboard123123">
-						<i class="icon-paper-clip"></i> Compras y proveedores</span>
-					</a>
-				</li>
-				<li>
-					<a ui-sref="income_expenses">
-						<i class="icon-paper-clip"></i> Ingresos y Egresos</span>
-					</a>
-				</li>
-				<li>
-					<a ui-sref="credit_note">
-						<i class="icon-paper-clip"></i> Nota a credito</span>
-					</a>
-				</li>
-			</ul>
 		</li>
 		<li class="nav-item" ng-show="validateMenu(0)">
 			<a class="nav-link nav-toggle">
